# gridc

./: .gitignore  LICENSE.txt  README.md  gridc.cabal  gridc.hs  readme.md  run.sh  runex.sh
examples/: ex0.gridc  ex1.gridc  ex1.gridlang  ex2.gridc  ex2.gridlang  ex3.gridc  ex3.gridlang  ex4.gridc  ex5.gridc  ex6.gridc  ex7.gridc  ex8.gridc  ex9.gridc
src/: Httpd.hs  Main.hs
src/GridC/: AST.hs  Codegen.hs  Lexer.hs  Optimizer.hs  Parser.hs  Parser2.hs  Util.hs
www/: index.html
