name:           GridC
version:        0.1
synopsis:       GridC to GridLang compiler
author:         Lessandro Mariano
license:        MIT
license-file:   LICENSE.txt
build-type:     Simple
cabal-version:  >= 1.2

executable gridc
  build-depends:  base, parsec, mtl, lens
  main-is:        Main.hs
  hs-source-dirs: src
