name:           GridC
version:        0.1
synopsis:       GridC to GridLang compiler
author:         Lessandro Mariano
license:        MIT
license-file:   LICENSE.txt
build-type:     Simple
cabal-version:  >= 1.2

flag httpd
  description: compile gridc-httpd
  default: False

executable gridc
  build-depends:  base, parsec, mtl, lens, transformers
  main-is:        Main.hs
  hs-source-dirs: src

executable gridc-httpd
  build-depends:  base, parsec, mtl, lens, transformers, network
  main-is:        Httpd.hs
  hs-source-dirs: src
  ghc-options:    -threaded
  if flag(httpd)
    buildable:    True
  else
    buildable:    False
